2003-11-20  Choe Hwanjin  <krisna@people.kldp.org>
	* relase 0.9.8
	* configure.in: version up to 0.9.8
	* gtkimcontexthangul.c: remove type-punned pointer expression
	* gtkimcontexthangul.c, gtkrc:
	  widget name을 imhangul_hanja에서 imhangul_candidate로 변경
	* gtkrc: change default encoding from euckr to utf8
	* gtkimcontexthangul.c, hanjatable.h, hanjatable.py:
	  rename hanjatable to hanja_table

2003-11-11  Choe Hwanjin  <krisna@people.kldp.org>
	* gtkimcontexthangul.c: apply new candidate window routine
	* gtkrc: gtkrc 기본값 수정

2003-11-10  Choe Hwanjin  <krisna@people.kldp.org>
	* gtkimcontexthangul.h: new candidate window code 적용
	* gtkimcontexthangul.c: candidate window 코드 추가

2003-10-30  Choe Hwanjin  <krisna@people.kldp.org>
	* 여러 텍스트 파일을 모두 UTF-8 인코딩으로 변환
	* ChangeLog, NEWS, README: 텍스트 인코딩을 UTF-8로 변환

2003-10-20  Choe Hwanjin <krisna@kldp.org>
	* Makefile.am: CFLAGS 정리, GTK_BINARY_VERSION 사용
	* imhangul.spec.in: GTK_BINARY_VERSION 사용
	* gtkimcontexthangul.c: 함수 정리

2003-09-05  Choe Hwanjin <krisna@kldp.org>
	* gtkimcontexthangul.c: xkb compatibility

2003-06-24  Choe Hwanjin <krisna@kldp.org>
	* gtkimcontexthangul.c: preedit_start, preedit_end signal 발생시킴
	  (from Nam SungHyun <namsh@kldp.org>)

2003-06-01  Choe Hwanjin <krisna@kldp.org>
	* imhangul.c: 두벌식 테이블 수정 GDK_D -> 110b
	  thanks to likesylph

2003-04-08  Choe Hwanjin <krisna@kldp.org>
	* gtkimcontexthangul.c: gtk-im-hangul-use-manual-mode 설정 변수 추가

2003-03-30  Choe Hwanjin <krisna@kldp.org>
	* release 0.9.6
	* 모듈 파일을 인스톨한 후 gtk-query-immodules-2.0를 실행함

2003-02-23  Choe Hwanjin <krisna@kldp.org>
	* update entry.c (add for GtkSettings)
	* preedit style을 정하는데 gtk_widget_get_default_style()을 사용

2003-02-22  Choe Hwanjin <krisna@kldp.org>
	* preedit_style_change()에서 widget이 NULL인지 체크함
	* DesktopInfo를 추가하여 모듈 종료할때 notify 콜백을 제거함

2003-02-12  Choe Hwanjin <krisna@kldp.org>
	* {G,GDK,GTK}_DISABLE_DEPRECATED 옵션 추가
	* GDK_ROOT_PARENT대신 gdk_screen_get_root_window를 사용함

2003-02-11  Choe Hwanjin <krisna@kldp.org>